# UniQUE-Auth

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Halloween.py  README.md  clalms.py  crud.py  data.py  database.py  db.diagram  db.py  docker-compose.dev.yaml  main.py  model.py  models.py  pylintrc  pyproject.toml  requirements.txt  router.py  run_tests.sh  schemas.py  test.py  カキカキ.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md
.github/workflows/: docker-tag.yaml  pylint.yml  ruff.yml
app/: crud.py  database.py  dependencies.py  main.py
app/cruds/: app.py  client.py  flag.py  flug.py  log.py  role.py  session.py  token.py  user.py
app/models/: __init__.py  app.py  client.py  flag.py  flug.py  log.py  middle_table.py  role.py  session.py  token.py  user.py
app/pages/: auth.html  login.html
app/routers/: __init__.py
app/routers/apps/: __init__.py  list.py
app/routers/flags/: __init__.py  list.py
app/routers/flugs/: __init__.py  list.py
app/routers/roles/: __init__.py  list.py
app/routers/token/: __init__.py  code.py
app/routers/users/: __init__.py  invite.py  list.py  me.py
app/schemas/: __init__.py  app.py  client.py  flag.py  flug.py  log.py  permisstions.py  role.py  token.py  user.py
app/utils/: token.py
cruds/: client.py  code.py  session.py  token.py  user.py
dev/: docker-compose.dev.yaml  docker-compose.test.yaml
dev/db/init/: 001_init.sql  20251111_email_verified.sql  init.sql
dev/db/migrations/: 20251113_users_index.sql
dev/nginx/: default.conf
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: AuthorizePage.tsx  LoginPage.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: index.ts
models/: __init__.py  client.py  code.py  session.py  token.py  user.py
pages/: confirm.html  login.html  signup.html
routers/: __init__.py
routers/token/: __init__.py
schemas/: __init__.py  app.py  client.py  permisstions.py  token.py
scripts/: build.sh  gen.sh  keys.sh  run.sh  swag.sh
src/: go.mod  go.sum
src/cmd/server/: main.go
src/docs/: docs.go  swagger.json  swagger.yaml
src/internal/config/: env.go  keys.go  scopes.go
src/internal/constants/: permissions.go
src/internal/db/: db.go
src/internal/model/: announcements.gen.go  applications.gen.go  audit_logs.gen.go  authorization_requests.gen.go  consents.gen.go  external_identities.gen.go  (+8 more)
tests/: conftest.py  create_db.py  crud.py  test_oidc_flow.py  test_utils.py
tests/cruds/: test.py
tests/model/: test.py
unique_api/: __init__.py
unique_api/app/: clalms.py  config.py  data.py  db.py  main.py  model.py  router.py  schema.py
unique_api/pages/: confirm.html  join.html  login.html  signup.html
utils/: permission2bit.py
(+68 files in other folders)
