[project]
name = "unique_api"
version = "1.0.0-alpha.11"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "docopt==0.6.2",
    "fastapi==0.115.12",
    "greenlet==3.1.1",
    "h11>=0.16.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "nanoid==2.0.0",
    "passlib==1.7.4",
    "pydantic==2.11.1",
    "pydantic_core==2.33.0",
    "PyJWT==2.10.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.40",
    "starlette==0.46.1",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.0",
    "urllib3==2.5.0",
    "uuid7==0.1.0",
    "uvicorn==0.34.0",
    "yarg==0.1.10",
    "mysqlclient==2.2.7",
    "sqlacodegen>=3.0.0",
    "pymysql>=1.1.1",
    "sqlmodel>=0.0.24",
    "ulid-py>=1.1.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "cryptography>=46.0.3",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "numbers",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
